--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/payment
-    username: admin
-    password: admin
+    url: jdbc:postgresql://${DATABASE_SERVER_NAME}:${DATABASE_PORT}/${DATABASE_NAME}
+    username: ${DATABASE_USER_NAME}
+    password: ${DATABASE_USER_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       connection-test-query: select 1
@@ -25,8 +25,9 @@ spring:
     stream:
       kafka:
         binder:
+          schema.registry.url: http://${SCHEMA_REGISTRY}:8081
           autoCreateTopics: true
-          brokers: localhost:9092
+          brokers: ${KAFKA_BROKERS}:9092
           configuration:
             value:
               deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
@@ -50,4 +51,4 @@ spring:
     properties:
       schema:
         registry:
-          url: http://localhost:8081
+          url: http://${SCHEMA_REGISTRY}:8081
